@@ -1,5 +1,6 @@
 
 5.2b1 -> 5.3a1
+    - jbj: use HAVE_STRUCT_STAT_ST_BIRTHTIME, retrofit st_ctime for the deprived.
     - jbj: use the AutoFu.
     - jbj: system: add AutoFu for S_ISTXT <-> S_ISVTX *shrug*.
     - jbj: use the new rpmio wrappers.
